tempfile/bon/tests/integration/ui/compile_fail/attr_bon.stderr
error: Unknown field: `attrs`
 --> tests/integration/ui/compile_fail/attr_bon.rs:5:7
  |
5 | #[bon(attrs)]
  |       ^^^^^

error: #[builder] attributes on the receiver are not supported
  --> tests/integration/ui/compile_fail/attr_bon.rs:16:12
   |
16 |     fn sut(#[builder] &self) {}
   |            ^

error: there are no #[builder] functions in the impl block, so there is no need for a #[bon] attribute here
  --> tests/integration/ui/compile_fail/attr_bon.rs:21:1
   |
21 | #[bon]
   | ^^^^^^
   |
   = note: this error originates in the attribute macro `bon` (in Nightly builds, run with -Z macro-backtrace for more info)
